corrected bug on safari for 'show pass' asset and now click enable/disable

--- a/src/components/logger/Logger.css
+++ b/src/components/logger/Logger.css
@@ -143,6 +143,7 @@ form .submit a {
   top: 0;
   right: 0;
   height: 45px;
+  width: 45px;
   margin: 10px;
   cursor: pointer;
   opacity: 0.5;
